--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,17 @@
     },
     "repositories":[
         {
-            "type": "git",
-            "url": "https://bitbucket.org/veksoftware/yii2-report-manager.git"
+            "type": "package",
+            "package": {
+                "name": "bburim/daterangepicker",
+                "version": "dev-master",
+                "source": {
+                    "url": "https://github.com/bburim/daterangepicker.git",
+                    "type": "git",
+                    "reference": "origin/master"
+                }
+            }
         },
-        {
-            "type": "git",
-            "url": "https://github.com/bburim/daterangepicker.git"
-        }
     ],
     "extra": {
         "bootstrap": "reportmanager\\base\\Init"
