--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "veksoftware/yii2-report-manager",
     "description": "Extension for generation reports and setting plans",
+    "version": "0.0.1",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","report manager"],
     "license": "MIT",
@@ -19,20 +20,6 @@
             "reportmanager\\": ""
         }
     },
-    "repositories":[
-        {
-            "type": "package",
-            "package": {
-                "name": "bburim/daterangepicker",
-                "version": "dev-master",
-                "source": {
-                    "url": "https://github.com/bburim/daterangepicker.git",
-                    "type": "git",
-                    "reference": "origin/master"
-                }
-            }
-        }
-    ],
     "extra": {
         "bootstrap": "reportmanager\\base\\Init"
     }
